--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "crosspointe-academy-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "build": "babel src -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node ./src/server.js",
     "live": "node src/server.js"
