--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "crosspointe-academy-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod": "node src/server.js"
+    "prod": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "repository": {
     "type": "git",
